--- a/project/capstone/src/app/app.component.html
+++ b/project/capstone/src/app/app.component.html
@@ -1,3 +1,7 @@
 
+<div>
+    <ul *ngFor ="let contactDetail of contactDetails let i = index">
+        <li> {{contactDetail.contactName}}: {{contactDetail.contactJobTitle}}:  {{contactDetail.contactEmail}}</li></ul>
+</div>
 <app-contact-details></app-contact-details>
 <!--app-address></app-address-->
