--- a/project/capstone/src/app/contact-details/contact-details.component.html
+++ b/project/capstone/src/app/contact-details/contact-details.component.html
@@ -1,3 +1,4 @@
+<p>{{postResponse}}</p>
 <h1 class="center">Welcome To Vennela's World</h1>
 <h2 class="center"> Enter your Contact details</h2>
 
@@ -14,6 +15,7 @@
 
     <label for="contact-phone">Contact phone: </label>
     <input id="contact-phone" type="text" formControlName="contactPhone"><br>
+    <br>
     <div formGroupName="contactAddress">
 
     <label for="contact-address">Address: </label><br>
@@ -29,7 +31,9 @@
 
     <label for="contact-address-state">State: </label>
     <input id="contact-address-state" type="text" formControlName="state"><br>
+  
     </div>
+    <br>
 
     <label for="contact-project-title">Project Title: </label>
     <input id="contact-project-title" type="text" formControlName="contactProjectTitle"><br>
